--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -10,6 +10,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/splash_logo"
         android:layout_centerInParent="true"
         android:src="@drawable/houseops_logo_dark_new"/>
 
