--- a/app/src/main/res/values-night-v23/themes.xml
+++ b/app/src/main/res/values-night-v23/themes.xml
@@ -1,5 +1,6 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
+<?xml version="1.0" encoding="utf-8"?>
+<resources>
+
     <style name="Theme.HouseOps" parent="Theme.MaterialComponents.DayNight.NoActionBar">
 
         <!-- Primary brand color. -->
@@ -22,6 +23,7 @@
 
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorOnPrimary</item>
+        <item name="android:windowLightStatusBar">false</item>
 
     </style>
 </resources>
