--- a/app/src/main/res/drawable/sign_in_button.xml
+++ b/app/src/main/res/drawable/sign_in_button.xml
@@ -2,12 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <stroke
-        android:color="?attr/colorPrimary"
-        android:width="2dp"/>
-
     <solid
-        android:color="?attr/colorOnPrimary"/>
+        android:color="?attr/colorPrimary"/>
 
     <corners
         android:radius="12dp"/>
