--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -79,6 +79,7 @@
                 app:hintEnabled="false"
                 android:padding="0dp"
                 app:passwordToggleEnabled="false"
+                app:boxStrokeWidth="0dp"
                 app:passwordToggleTint="?attr/colorPrimary">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -122,6 +123,7 @@
                 android:layout_height="wrap_content"
                 app:hintEnabled="false"
                 android:padding="0dp"
+                app:boxStrokeWidth="0dp"
                 app:passwordToggleEnabled="true"
                 app:passwordToggleTint="?attr/colorPrimary">
 
@@ -152,19 +154,61 @@
             android:textSize="12sp"
             android:includeFontPadding="false"
             android:fontFamily="@font/poppins_regular"
-            android:textColor="?attr/textBlack100"
+            android:textColor="?attr/colorPrimary"
             android:textStyle="bold"
             android:layout_marginTop="32dp"/>
 
         <androidx.appcompat.widget.AppCompatButton
             android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_height="50dp"
             android:background="@drawable/sign_in_button"
             android:id="@+id/signInButton"
             android:elevation="10dp"
             android:text="Sign In"
             android:textAllCaps="false"
             android:layout_marginTop="32dp" />
+        
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="OR"
+            android:textSize="14sp"
+            android:textColor="?attr/textBlack100"
+            android:textStyle="bold"
+            android:layout_marginTop="16dp"/>
+
+        <!--Create Account-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:layout_marginTop="16dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/create_account_text"
+                android:text="Don't Have an account? "
+                android:textSize="12sp"
+                android:includeFontPadding="false"
+                android:fontFamily="@font/poppins_regular"
+                android:textColor="?attr/textBlack100"
+                android:textStyle="bold" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/sign_up_text"
+                android:text="Sign Up"
+                android:textSize="14sp"
+                android:includeFontPadding="false"
+                android:fontFamily="@font/poppins_regular"
+                android:textColor="?attr/colorPrimary"
+                android:textStyle="bold"/>
+
+        </LinearLayout>
 
     </LinearLayout>
 
