--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -165,6 +165,7 @@
             android:id="@+id/signInButton"
             android:elevation="10dp"
             android:text="Sign In"
+            android:fontFamily="@font/poppins_regular"
             android:textAllCaps="false"
             android:layout_marginTop="32dp" />
         
