--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -250,9 +250,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:background="@drawable/sign_in_button"
-                    android:id="@+id/signInButton"
+                    android:id="@+id/signUpButton"
                     android:elevation="10dp"
-                    android:text="Sign In"
+                    android:text="Sign Up"
                     android:textAllCaps="false"
                     android:layout_marginTop="32dp" />
 
