--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,47 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?attr/colorOnPrimary"
+    android:orientation="vertical"
     tools:context=".activities.LoginActivity">
 
-    <!--The Real Estate Image at the back-->
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="250dp">
-
-        <!--Watermark image-->
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="centerCrop"
-            android:src="@drawable/real_estate_1"/>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/accent_blue_dull_trans">
-
-            <!--Logo-->
-            <ImageView
-                android:layout_width="250dp"
-                android:layout_height="150dp"
-                android:layout_centerHorizontal="true"
-                android:scaleType="centerCrop"
-                android:layout_marginTop="8dp"
-                android:src="@drawable/houseops_logo_white_new" />
-
-        </RelativeLayout>
-
-    </FrameLayout>
+    <ImageView
+        android:layout_width="200dp"
+        android:layout_height="150dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="24dp"
+        android:src="@drawable/undraw_fingerprint_re_uf3f"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/top_rounded_view"
-        android:layout_marginTop="150dp"
+        android:background="?attr/colorOnPrimary"
         android:padding="16dp"
         android:orientation="vertical">
 
@@ -61,25 +38,23 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
-            android:orientation="vertical">
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/email"
-                android:textSize="14sp"
-                android:includeFontPadding="false"
-                android:fontFamily="@font/poppins_bold"
-                android:textColor="?attr/colorPrimary"
-                android:textStyle="bold"/>
+            <ImageView
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:src="@drawable/at_solid"
+                app:tint="?attr/textBlack100"/>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="64dp"
+                android:layout_height="56dp"
                 app:hintEnabled="false"
                 android:padding="0dp"
                 app:passwordToggleEnabled="false"
                 app:boxStrokeWidth="0dp"
+                android:layout_marginStart="16dp"
                 app:passwordToggleTint="?attr/colorPrimary">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -93,7 +68,6 @@
                     android:textColor="?attr/textBlack700"
                     android:background="@drawable/rounded_edit_text"
                     android:id="@+id/emailSignIn"
-                    android:layout_marginTop="16dp"
                     android:padding="0dp"/>
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -106,23 +80,21 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
-            android:orientation="vertical">
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/password"
-                android:textSize="14sp"
-                android:includeFontPadding="false"
-                android:fontFamily="@font/poppins_bold"
-                android:textColor="?attr/colorPrimary"
-                android:textStyle="bold"/>
+            <ImageView
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:src="@drawable/key_solid"
+                app:tint="?attr/textBlack100"/>
             
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="56dp"
                 app:hintEnabled="false"
                 android:padding="0dp"
+                android:layout_marginStart="16dp"
                 app:boxStrokeWidth="0dp"
                 app:passwordToggleEnabled="true"
                 app:passwordToggleTint="?attr/colorPrimary">
@@ -138,7 +110,6 @@
                     android:textColor="?attr/textBlack700"
                     android:background="@drawable/rounded_edit_text"
                     android:id="@+id/passwordSignIn"
-                    android:layout_marginTop="16dp"
                     android:padding="0dp"/>
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -170,6 +141,7 @@
                 android:id="@+id/signInButton"
                 android:elevation="10dp"
                 android:text="Sign In"
+                android:textColor="@color/text_white_900"
                 android:visibility="visible"
                 android:fontFamily="@font/poppins_regular"
                 android:textAllCaps="false" />
@@ -191,7 +163,36 @@
             android:textSize="14sp"
             android:textColor="?attr/textBlack100"
             android:textStyle="bold"
+            android:fontFamily="@font/poppins_regular"
             android:layout_marginTop="16dp"/>
+
+        <!--Sign in with google option-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:id="@+id/signInGoogleBtn"
+            android:background="@drawable/rounded_edit_text"
+            android:gravity="center"
+            android:layout_marginTop="16dp"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/google"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Login with Google"
+                android:includeFontPadding="false"
+                android:textStyle="bold"
+                android:textSize="14sp"
+                android:layout_marginStart="16dp"
+                android:textColor="?attr/textBlack500"
+                android:fontFamily="@font/poppins_regular"/>
+
+        </LinearLayout>
 
         <!--Create Account-->
         <LinearLayout
@@ -227,4 +228,4 @@
 
     </LinearLayout>
 
-</FrameLayout>
+</LinearLayout>
