--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,9 +10,13 @@
     <color name="bg_dark_light">#282828</color>
     <color name="bg_dark_light_trans">#D9282828</color>
 
-    <color name="accent_blue_bright">#70C3C9</color>
-    <color name="accent_blue_dull">#1D3F4D</color>
-    <color name="accent_blue_dull_trans">#D91D3F4D</color>
+<!--    <color name="accent_blue_bright">#70C3C9</color>-->
+<!--    <color name="accent_blue_dull">#1D3F4D</color>-->
+<!--    <color name="accent_blue_dull_trans">#D91D3F4D</color>-->
+
+    <color name="accent_blue_bright">#008CFF</color>
+    <color name="accent_blue_dull">#1E4667</color>
+    <color name="accent_blue_dull_trans">#D8008CFF</color>
 
     <!--Text Black Colors-->
     <color name="text_black_900">#000000</color>
