Forgot password Activity

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -4,6 +4,117 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="?attr/colorOnPrimary"
+    android:orientation="vertical"
     tools:context=".activities.ForgotPasswordActivity">
+
+    <include
+        layout="@layout/toolbar"
+        android:id="@+id/forgotToolbar"/>
+
+    <ImageView
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_gravity="center_horizontal"
+        android:src="@drawable/undraw_forgot_password_re_hxwm"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="?attr/colorOnPrimary"
+        android:padding="16dp"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Forgot\nPassword?"
+            android:textSize="26sp"
+            android:includeFontPadding="false"
+            android:fontFamily="@font/poppins_bold"
+            android:textColor="?attr/textBlack700"
+            android:textStyle="bold"
+            android:layout_marginTop="8dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Don't worry, it happens.Please enter the address associated withyour account."
+            android:textSize="14sp"
+            android:includeFontPadding="false"
+            android:fontFamily="@font/poppins_regular"
+            android:textColor="?attr/textBlack300"
+            android:textStyle="bold"
+            android:layout_marginTop="16dp"/>
+
+        <!--Email Login-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:src="@drawable/at_solid"
+                app:tint="?attr/textBlack100"/>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="56dp"
+                app:hintEnabled="false"
+                android:padding="0dp"
+                app:passwordToggleEnabled="false"
+                app:boxStrokeWidth="0dp"
+                android:layout_marginStart="16dp"
+                app:passwordToggleTint="?attr/colorPrimary">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:inputType="textEmailAddress"
+                    android:fontFamily="@font/poppins_regular"
+                    android:lines="1"
+                    android:hint="@string/email_hint"
+                    android:textSize="14sp"
+                    android:textColor="?attr/textBlack700"
+                    android:background="@drawable/rounded_edit_text"
+                    android:id="@+id/emailSignIn"
+                    android:padding="0dp"/>
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+
+        </LinearLayout>
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp">
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:background="@drawable/sign_in_button"
+                android:id="@+id/submitForgotPasswordButton"
+                android:elevation="10dp"
+                android:text="Submit"
+                android:textColor="@color/text_white_900"
+                android:visibility="visible"
+                android:fontFamily="@font/poppins_regular"
+                android:textAllCaps="false" />
+
+            <ProgressBar
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:id="@+id/forgotPassProgressBar"
+                android:layout_gravity="center"
+                android:visibility="gone"/>
+
+        </FrameLayout>
+
+    </LinearLayout>
 
 </LinearLayout>
