Firebase send password reset email

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -16,7 +16,7 @@
         android:layout_width="300dp"
         android:layout_height="300dp"
         android:layout_gravity="center_horizontal"
-        android:src="@drawable/undraw_forgot_password_re_hxwm"/>
+        android:src="@drawable/undraw_signal_searching_re_yl8n"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -40,7 +40,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Don't worry, it happens.Please enter the address associated withyour account."
-            android:textSize="14sp"
+            android:textSize="12sp"
             android:includeFontPadding="false"
             android:fontFamily="@font/poppins_regular"
             android:textColor="?attr/textBlack300"
@@ -51,7 +51,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="24dp"
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
@@ -81,7 +81,7 @@
                     android:textSize="14sp"
                     android:textColor="?attr/textBlack700"
                     android:background="@drawable/rounded_edit_text"
-                    android:id="@+id/emailSignIn"
+                    android:id="@+id/emailForgot"
                     android:padding="0dp"/>
 
             </com.google.android.material.textfield.TextInputLayout>
