--- a/app/src/main/res/layout/admin_category_item.xml
+++ b/app/src/main/res/layout/admin_category_item.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="140dp"
-    android:layout_height="160dp"
+    android:layout_width="260dp"
+    android:layout_height="250dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_gravity="center_horizontal"
     app:cardElevation="0dp"
     app:cardCornerRadius="8dp"
     app:cardBackgroundColor="?attr/colorOnPrimary"
-    android:layout_margin="8dp">
+    android:layout_marginBottom="8dp">
 
     <LinearLayout
         android:layout_width="match_parent"
