--- a/app/src/main/res/layout/activity_caretaker.xml
+++ b/app/src/main/res/layout/activity_caretaker.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?attr/colorOnPrimary"
-    tools:context=".activities.AdminActivity">
+    tools:context=".activities.CaretakerActivity">
 
     <include
         layout="@layout/toolbar"
