--- a/app/src/main/res/menu/admin_toolbar_menu.xml
+++ b/app/src/main/res/menu/admin_toolbar_menu.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <item
+        android:id="@+id/quitAdminMenu"
+        android:title="Back to Home"
+        android:icon="@drawable/right_from_bracket_solid"
+        app:showAsAction="always"/>
 </menu>
