--- a/app/src/main/res/layout/activity_caretaker.xml
+++ b/app/src/main/res/layout/activity_caretaker.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,29 +9,76 @@
 
     <include
         layout="@layout/toolbar"
-        android:id="@+id/adminToolbar"/>
+        android:id="@+id/caretakerToolbar"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/adminTitle"
-        android:text="Categories"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        android:layout_below="@id/adminToolbar"
-        android:textColor="?attr/textBlack700"
-        android:layout_marginTop="32dp"
-        android:layout_marginStart="16dp" />
 
-    <androidx.recyclerview.widget.RecyclerView
+    <!--Main Content-->
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="8dp"
-        android:id="@+id/adminRecyclerView"
-        android:scrollbars="vertical"
-        android:scrollbarStyle="outsideInset"
-        android:layout_below="@id/adminTitle"
-        android:layout_marginTop="32dp"
-        android:layout_marginStart="8dp"/>
+        android:layout_marginTop="?attr/actionBarSize">
 
-</RelativeLayout>
+        <!--Welcome back text-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/welcomeTextHolder"
+            android:padding="16dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Hello"
+                android:textSize="14sp"
+                android:textStyle="bold"
+                android:textColor="?attr/textBlack100"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Patricia W."
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:layout_below="@id/caretakerToolbar"
+                android:textColor="?attr/textBlack700"
+                android:layout_marginTop="4dp" />
+
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/adminTitle"
+            android:text="Categories"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:layout_below="@id/welcomeTextHolder"
+            android:textColor="?attr/textBlack700"
+            android:layout_marginTop="32dp"
+            android:layout_marginStart="16dp" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="8dp"
+            android:id="@+id/adminRecyclerView"
+            android:scrollbars="vertical"
+            android:scrollbarStyle="outsideInset"
+            android:layout_below="@id/adminTitle"
+            android:layout_marginTop="32dp"
+            android:layout_marginStart="8dp"/>
+
+    </RelativeLayout>
+
+    <!--Floating action button-->
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/caretakerFab"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="16dp"
+        app:shapeAppearanceOverlay="@style/fab_square"/>
+
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
