--- a/app/src/main/res/values-night-v23/themes.xml
+++ b/app/src/main/res/values-night-v23/themes.xml
@@ -27,4 +27,13 @@
         <item name="android:windowLightStatusBar">false</item>
 
     </style>
+
+    <!--Change fab shape to square-->
+    <style name="fab_square" parent="">
+
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">8dp</item>
+
+    </style>
+
 </resources>
