--- a/app/src/main/res/layout/fragment_caretaker_sign_up.xml
+++ b/app/src/main/res/layout/fragment_caretaker_sign_up.xml
@@ -66,7 +66,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:gravity="center"
-                        android:inputType="number"
+                        android:inputType="text"
                         android:fontFamily="@font/poppins_regular"
                         android:lines="1"
                         android:hint="Apartment name"
