--- a/app/src/main/res/layout/activity_caretaker.xml
+++ b/app/src/main/res/layout/activity_caretaker.xml
@@ -39,12 +39,12 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:id="@+id/caretaker_name"
                 android:text="Patricia W."
                 android:textSize="14sp"
                 android:fontFamily="@font/poppins_regular"
                 android:includeFontPadding="false"
                 android:textStyle="bold"
-                android:layout_below="@id/caretakerToolbar"
                 android:textColor="?attr/textBlack500"
                 android:layout_marginTop="4dp" />
 
@@ -53,6 +53,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/caretaker_apartments"
             android:layout_below="@id/welcomeTextHolder"
             android:text="Blessed Apartments"
             android:textSize="18sp"
@@ -63,17 +64,56 @@
             android:includeFontPadding="false"
             android:layout_centerHorizontal="true"/>
 
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/caretaker_apartments">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/caretaker_recycler_view"
+                android:visibility="invisible"
+                android:scrollbars="vertical"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:visibility="visible"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
+                    android:id="@+id/caretaker_svg"
+                    android:src="@drawable/undraw_buy_house_re_8xq7"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Add a new house"
+                    android:textColor="?attr/textBlack300"
+                    android:textStyle="bold"
+                    android:fontFamily="@font/poppins_regular"
+                    android:layout_marginTop="32dp"/>
+
+            </LinearLayout>
+
+        </FrameLayout>
+
     </RelativeLayout>
 
     <!--Floating action button-->
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/caretakerFab"
+        android:id="@+id/caretaker_fab"
         app:borderWidth="0dp"
         android:layout_gravity="bottom|end"
         android:layout_margin="16dp"
         app:backgroundTint="@color/accent_blue_bright_trans"
+        app:tint="@color/text_white_900"
         android:src="@drawable/ic_baseline_add_24"/>
 
 
