--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,7 +7,7 @@
         android:icon="@drawable/ic_home"/>
 
     <item
-        android:id="@+id/home"
+        android:id="@+id/booked_menu"
         android:title="Booked"
         android:icon="@drawable/ic_booked"/>
 
