--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,8 +15,9 @@
 <!--    <color name="accent_blue_dull_trans">#D91D3F4D</color>-->
 
     <color name="accent_blue_bright">#008CFF</color>
-    <color name="accent_blue_bright_trans">#008CFF</color>
-    <color name="accent_blue_dull">#1E4667</color>
+    <color name="accent_blue_bright_trans">#80008CFF</color>
+    <color name="accent_blue_dull">#591E4667</color>
+    <color name="accent_blue_dull_full">#1E4667</color>
     <color name="accent_blue_dull_trans">#D8008CFF</color>
 
     <!--Text Black Colors-->
