--- a/app/src/main/res/drawable/bottom_rounded_view.xml
+++ b/app/src/main/res/drawable/bottom_rounded_view.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
 
     <solid
-        android:color="@color/accent_blue_dull"/>
+        android:color="@color/accent_blue_dull_full"/>
 
     <corners
         android:bottomLeftRadius="24dp"
