--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -91,7 +91,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/username_greeting"
-                android:text="Kenneth M."
+                android:text=""
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:layout_marginTop="8dp"
